WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92052
Fix regressions in replay performance tests
https://bugs.webkit.org/show_bug.cgi?id=92052
Summary
Fix regressions in replay performance tests
Ryosuke Niwa
Reported
2012-07-23 18:35:35 PDT
Fix regressions in replay performance tests
Attachments
Patch
(5.56 KB, patch)
2012-07-23 18:43 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-07
(334.98 KB, application/zip)
2012-07-23 20:37 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.24 KB, patch)
2012-07-23 21:36 PDT
,
Ryosuke Niwa
dpranke
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-07-23 18:43:04 PDT
Created
attachment 153931
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-23 20:37:18 PDT
Comment on
attachment 153931
[details]
Patch
Attachment 153931
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13325300
New failing tests: fast/ruby/generated-before-counter-doesnt-crash.html fast/loader/null-request-after-willSendRequest.html fast/css-generated-content/malformed-url.html fast/ruby/before-table-doesnt-crash.html svg/W3C-SVG-1.1-SE/svgdom-over-01-f.svg fast/ruby/before-block-doesnt-crash.html
WebKit Review Bot
Comment 3
2012-07-23 20:37:22 PDT
Created
attachment 153945
[details]
Archive of layout-test-results from gce-cr-linux-07 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Ryosuke Niwa
Comment 4
2012-07-23 21:36:39 PDT
Created
attachment 153953
[details]
Patch
Dirk Pranke
Comment 5
2012-07-24 11:07:17 PDT
Comment on
attachment 153953
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=153953&action=review
> Tools/Scripts/webkitpy/performance_tests/perftest_unittest.py:198 > + self.assertEqual(port.host.filesystem.files['/path/some-dir/some-test-actual.png'], 'actual image')
I try to keep clients of the mock filesystem from actually accessing files; it should probably be _files instead. Can you change this to filesystem.read_binary_file()?
> Tools/Scripts/webkitpy/performance_tests/perftest_unittest.py:285 > + self.assertEqual(port.host.filesystem.files['/path/some-dir/some-test-expected.png'], 'actual image')
same thing ...
Ryosuke Niwa
Comment 6
2012-07-24 11:16:36 PDT
Comment on
attachment 153953
[details]
Patch Thanks for the review. Landing the patch after addressing the comments.
Ryosuke Niwa
Comment 7
2012-07-24 11:31:17 PDT
Committed
r123498
: <
http://trac.webkit.org/changeset/123498
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug